--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "node-db4-project",
   "version": "1.0.0",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js",
-    "ketchup": "git fetch && git reset --hard origin/lecture"
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "reset": "npm run rollback && npm run migrate && npm run seed",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -11,13 +15,14 @@
   },
   "devDependencies": {
     "eslint": "^7.28.0",
+    "knex-cleaner": "^1.3.1",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "knex": "^0.95.6",
-    "knex-cleaner": "^1.3.1",
     "sqlite3": "^5.0.2"
   }
 }
